--- a/名称.md
+++ b/名称.md
@@ -6,7 +6,7 @@
 ###### [luci-app-adblock-plus  ](#/README.md) &emsp;&emsp; # Adblock Plus+ 拦截广告
 ###### [luci-app-adbyby-plus   ](#/README.md) &emsp;&emsp; # 广告屏蔽大师Plus +
 ###### [luci-app-adguardhome  ](#/README.md) &emsp;&emsp; # adguardhome广告过滤
-###### [luci-app-advanced  ](#/README.md) &emsp;&emsp; # 高级设置（内置###### [luci-app-fileassistant文件助手）
+###### [luci-app-advanced  ](#/README.md) &emsp;&emsp; # 高级设置（luci-app-fileassistant文件助手）
 ###### [luci-app-advanced-reboot  ](#/README.md) &emsp;&emsp; # 高级重启
 ###### [luci-app-ahcp  ](#/README.md) &emsp;&emsp; # 支持 AHCPd
 ###### [luci-app-airplay2  ](#/README.md) &emsp;&emsp; # Apple AirPlay2 无损音频接收服务器
@@ -133,7 +133,7 @@
 ###### [luci-app-syncdial  ](#/README.md) &emsp;&emsp; # 多拨虚拟网卡（原macvlan
 ###### [luci-app-syncthing  ](#/README.md) &emsp;&emsp; # syncthing同步工具
 ###### [luci-app-tencentddns  ](#/README.md) &emsp;&emsp; # 腾讯DDNS
-###### [luci-app-timecontrol  ](#/README.md) &emsp;&emsp; # 时间控制跟（###### [luci-app-accesscontrol）差不多，不同的是这个可以配合高级设置一起使用
+###### [luci-app-timecontrol  ](#/README.md) &emsp;&emsp; # 时间控制跟（luci-app-accesscontrol）差不多，不同的是这个可以配合高级设置一起使用
 ###### [luci-app-tinyproxy  ](#/README.md) &emsp;&emsp; # Tinyproxy是 HTTP(S)代理服务器
 ###### [luci-app-transmission  ](#/README.md) &emsp;&emsp; # BT下载工具
 ###### [luci-app-travelmate  ](#/README.md) &emsp;&emsp; # 旅行路由器
