--- a/名称.md
+++ b/名称.md
@@ -6,7 +6,7 @@
 ###### [luci-app-adblock-plus  ](#/README.md) &emsp;&emsp; # Adblock Plus+ 拦截广告
 ###### [luci-app-adbyby-plus   ](#/README.md) &emsp;&emsp; # 广告屏蔽大师Plus +
 ###### [luci-app-adguardhome  ](#/README.md) &emsp;&emsp; # adguardhome广告过滤
-###### [luci-app-advanced  ](#/README.md) &emsp;&emsp; # 高级设置（luci-app-fileassistant文件助手）
+###### [luci-app-advanced  ](#/README.md) &emsp;&emsp; # 高级设置（内置[luci-app-fileassistant](#/README.md)文件助手）
 ###### [luci-app-advanced-reboot  ](#/README.md) &emsp;&emsp; # 高级重启
 ###### [luci-app-ahcp  ](#/README.md) &emsp;&emsp; # 支持 AHCPd
 ###### [luci-app-airplay2  ](#/README.md) &emsp;&emsp; # Apple AirPlay2 无损音频接收服务器
