--- a/名称.md
+++ b/名称.md
@@ -41,6 +41,7 @@
 ###### [luci-app-diskman  ](#/README.md) &emsp;&emsp; # 磁盘管理工具
 ###### [luci-app-dnscrypt-proxy  ](#/README.md) &emsp;&emsp; # DNSCrypt解决DNS污染
 ###### [luci-app-dnsforwarder  ](#/README.md) &emsp;&emsp; # DNSForwarder防DNS污染
+###### [luci-app-docker  ](#/README.md) &emsp;&emsp; # 不带控制面板的docker
 ###### [luci-app-dockerman  ](#/README.md) &emsp;&emsp; # 带控制面板的docker
 ###### [luci-app-dump1090  ](#/README.md) &emsp;&emsp; # 民航无线频率（不确定）
 ###### [luci-app-dynapoint  ](#/README.md) &emsp;&emsp; # DynaPoint（未知）
@@ -113,6 +114,7 @@
 ###### [luci-app-rclone  ](#/README.md) &emsp;&emsp; # 命令行云端同步工具
 ###### [luci-app-rebootschedule  ](#/README.md) &emsp;&emsp; # 多功能定时任务（重启网络、重启系统、重启WIFI、重新拨号...）
 ###### [luci-app-rp-pppoe-server  ](#/README.md) &emsp;&emsp; # Roaring Penguin PPPoE Server 服务器
+###### [luci-app-samba  ](#/README.md) &emsp;&emsp; # 网络共享
 ###### [luci-app-samba4  ](#/README.md) &emsp;&emsp; # 网络共享（Samba4）
 ###### [luci-app-serverchan  ](#/README.md) &emsp;&emsp; # 微信推送
 ###### [luci-app-shadowsocks-libev  ](#/README.md) &emsp;&emsp; # SS-libev服务端
