--- a/其他说明.md
+++ b/其他说明.md
@@ -1,8 +1,14 @@
 # 其他说明：
 #
-- 支持ipv6：1、Global build settings ---> Enable IPv6 support in packages (NEW)（选上）
--             2、Extra packages ---> ipv6helper（选上）
--             3、安装好固件后在-网络-DHCP/DNS里的高级设置-把“禁止解析 IPv6 DNS 记录”的“√”去掉
+````
+- 支持ipv6：
+1、Global build settings ---> Enable IPv6 support in packages (NEW)（选上）
+2、Extra packages ---> ipv6helper（选上）
+3、Base system  ---> Build with DHCPv6 support. （选上）
+4、Network  ---> 6in4 和 6rd 和 6to4  （三个都选上）
+
+以上的选项各源码可能默认勾选，没的就选上，选了的就不用管，我说的的这些都勾选完就可以了
+````
 #
 - 不要ipv6：Global build settings ---> Enable IPv6 support in packages (NEW)（不选），就好了
 #
