--- a/其他说明.md
+++ b/其他说明.md
@@ -8,10 +8,15 @@
 3、Base system  --->  [ ] Build with DHCPv6 support.  （选上）
 4、Network  --->  6in4 和 6rd 和 6to4  （三个都选上）
 
-以上的选项各源码可能默认勾选，没的就选上，选了的就不用管，我说的这些按顺序去查看，没选的就选上就可以了
+以上的选项各源码可能个别默认勾选了，没的就选上，选了的就不用管，我说的这些按顺序去查看，没选的就选上就可以了
 ````
 #
-- 不要ipv6：Global build settings ---> Enable IPv6 support in packages (NEW)（不选），就好了
+````
+- 编译 IPV4 固件：
+
+Global build settings ---> Enable IPv6 support in packages (NEW)（不选），就好了
+
+一般情况下，源码是默认选择了这个的，如果你不是要编译ipv6固件的话，就把这个去掉就好了
 #
 - 网络共享luci-app-samba默认是去不掉的，在：Extra packages ---> autosamba（不选），就可以不选luci-app-samba
 #
