--- a/其他说明.md
+++ b/其他说明.md
@@ -14,7 +14,7 @@
 ````
 - 编译 IPV4 固件：
 
-Global build settings ---> Enable IPv6 support in packages (NEW)（不选），就好了
+Global build settings ---> Enable IPv6 support in packages (NEW)（取消掉，不选择）
 
 一般情况下，源码是默认选择了这个的，如果你不是要编译ipv6固件的话，就把这个去掉就好了
 ````
