--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -5,7 +5,7 @@
 - 你也可以自己测试一下你机子能不能搞定时升级固件功能，测试方法也很简单，用[WinSCP](https://winscp.net/eng/download.php)工具连接你的路由器，然后把固件拖进路由器的tmp文件夹里面，然后用固件后台自带的‘TTYD 终端’或者叫‘命令窗’，或者SSH工具都可以，用工具得要先连接你的路由器，然后在命令窗输入 cd /tmp 进入文件夹后就用升级命令更新固件，如果能顺利安装固件的话，就表示你的路由器可以用定时更新插件了，命令是：sysupgrade -F -n 固件完整名字+后缀
 - 如果你的机子可以用定时更新，而你机子编译出来的固件又不能提取发布到Releases上，可以联系我，我帮你适配
 ```
-回顾上面步骤，把固件拖入固件的tmp文件夹中，然后用命令进入文件夹
+回顾上面测试步骤，把固件拖入固件的tmp文件夹中，然后用命令进入文件夹
 
 cd /tmp
 
@@ -18,6 +18,8 @@ sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
 ```
+如果你的机子支持自动更新的话，可以在 build/对应源码文件夹/settings.ini 里面把 REGULAR_UPDATE="true" 改成 REGULAR_UPDATE="true"
+
 luci-app-autoupdate    定时更新插件
 luci-app-ttyd        openwrt内置SSH命令窗
 ```
