--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -18,7 +18,8 @@ sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
 ```
-如果你的机子支持自动更新的话，可以在 build/对应源码文件夹/settings.ini 里面把 REGULAR_UPDATE="true" 改成 REGULAR_UPDATE="true"
+如果你的机子支持自动更新的话，可以在 build/对应源码文件夹/settings.ini 里面
+比如 build/Lede_source/settings.ini 把 REGULAR_UPDATE="false" 改成 REGULAR_UPDATE="true"
 
 luci-app-autoupdate    定时更新插件
 luci-app-ttyd        openwrt内置SSH命令窗
