--- a/名称.md
+++ b/名称.md
@@ -161,6 +161,7 @@
 ###### [luci-app-wifischedule  ](#/README.md) &emsp;&emsp; # WiFi 计划
 ###### [luci-app-wireguard  ](#/README.md) &emsp;&emsp; # VPN服务器 WireGuard状态
 ###### [luci-app-wol  ](#/README.md) &emsp;&emsp; # WOL网络唤醒
+###### [luci-app-wolplus  ](#/README.md) &emsp;&emsp; # 新版网络唤醒，替换luci-app-wol
 ###### [luci-app-wrtbwmon  ](#/README.md) &emsp;&emsp; # 实时流量监测
 ###### [luci-app-xlnetacc  ](#/README.md) &emsp;&emsp; # 迅雷快鸟
 ###### [luci-app-zerotier  ](#/README.md) &emsp;&emsp; # ZeroTier内网穿透
