--- a/名称.md
+++ b/名称.md
@@ -49,6 +49,7 @@
 ###### [luci-app-easymesh  ](#/README.md) &emsp;&emsp; # 简单MESH(可有线+无线回程)
 ###### [luci-app-eqos  ](#/README.md) &emsp;&emsp; # 内网IP地址限速
 ###### [luci-app-familycloud  ](#/README.md) &emsp;&emsp; # 家庭云盘
+###### [luci-app-fileassistant  ](#/README.md) &emsp;&emsp; # 文件助手
 ###### [luci-app-filebrowser  ](#/README.md) &emsp;&emsp; # 文件管理器
 ###### [luci-app-filetransfer  ](#/README.md) &emsp;&emsp; # 文件传输（可web安装ipk包）
 ###### [luci-app-firewall  ](#/README.md) &emsp;&emsp; # 添加防火墙
