--- a/手动开始.md
+++ b/手动开始.md
@@ -4,5 +4,7 @@
 #
 #
 ## 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤1、2、3、4一步步点击就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
-## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd1052.png" />
+---
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd1053.png" />
 #
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd1054.png" />
