--- a/手动开始.md
+++ b/手动开始.md
@@ -1,10 +1,7 @@
-# 启动编译的按钮
+# 启动编译的按钮，启动后如果没看到有启动，就刷新一下网页，有时候有可能卡住了，有时候卡个5~7分钟都不出奇
 #
-## !<img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd0012.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd0012.png" />
 #
-#
-## 以下图片是几个图片集成在一起的，刚看到的时候不会全部显示，按步骤1、2、3、4一步步点击就可以了，点击绿色按钮开始编译后，没显示编译，刷新下网页看看，这个按钮启动有时候会有延迟1~2分钟启动
----
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd1053.png" />
 #
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/sd1054.png" />
