--- a/选择机型.md
+++ b/选择机型.md
@@ -9,4 +9,4 @@
 
 
 #
-# 《[如果没有你想编译的机型，请看](https://github.com/danshui-git/shuoming/blob/master/%E7%AE%80%E5%8D%95%E4%BB%8B%E7%BB%8D%E6%96%B0%E8%84%9A%E6%9C%AC.md)》
+# 《[每个源码对应一个文件夹，如果您想同一个源码，编译不一样的机型或者多配置的固件的话，您需要自己多建立机型文件夹，请看](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
