--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -3,6 +3,7 @@
 > 《[Lede_source](https://github.com/coolsnowwolf/lede)》这个是Lede-18.06的源码公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。
 >> 《[Lienol_source](https://github.com/Lienol/openwrt/tree/19.07)》这个是Lienol-19.07的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。
 >>> 《[Mortal_source](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》这个是immortalwrt-21.02的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。
+>>> 《[Tianling_source](https://github.com/immortalwrt/immortalwrt/tree/openwrt-18.06)》这个是immortalwrt-18.06的公用机型文件夹,用此源码可以编译出此源码支持编译的所有机型固件。
 >>>> 《[openwrt_amlogic](https://github.com/coolsnowwolf/lede)》这个是编译N1和晶晨系列盒子固件专用。
 >>>>> 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 ----
