--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -8,7 +8,7 @@
 - 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 ----
 - # 2、<br>
-# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x221.png" />
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2211.png" />
 #
 - # 3、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/322.png" />
@@ -27,6 +27,5 @@
 #
 - ### 5、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，就比如K2P闪存是16M的，但是固件体积最大只能15.2MB大小，超过就不行了
 #
-- ### 6、微信通知跟自动发布固功能，在没设置好密匙的情况下，请不要打开微信通知跟自动发布功能。 《[微信通知跟自动发布固功能密匙获取跟使用教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)》 
 
-- ### 7、本仓库是由编译主体、外加扩展、插件包，三部分组成的build-actions这个仓库就是主体，其他的外加扩展跟插件包你们是不需要理会的，每次你们启动主体编译的时候就会下载外加扩展跟插件包，这样就可以做到每次编译都同步我最新仓库的目的，一般情况下，我没修改主体的build-openwrt.yml文件，你们是不需要重复拉取我仓库来更新仓库的，如果主体文件有改变需要你们更新仓库的时候，运行至公告那里就会出错了，这个是我特意弄的，如果出现在公告那里就出错不能继续运行下去，意思就是要更新仓库了，怎么更新法，一般我都会在公告那里写，就算运行至公告错误，也可以点击公告展开来看见公告内容，无非就是复制一下build-openwrt.yml文件内容吧，如果连带build里面的文件也有修改的话，就要重新拉取仓库了。
+- ### 7、本仓库是由编译主体、外加扩展、插件包，三部分组成的build-actions这个仓库就是主体，其他的外加扩展跟插件包你们是不需要理会的，每次你们启动主体编译的时候就会下载外加扩展跟插件包，这样就可以做到每次编译都同步我最新仓库的目的
