--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -22,7 +22,7 @@
 
     Lienol跟lede、Mortal有些文件做出来的补丁不通用的，所以你们要做补丁的时候一定要根据各个作者源码文件来制作
 ----
-- files文件夹，是用来存放你编译好固件然后安装好固件后设置好的文件，固件的文件在什么位置(路径),你就按什么路径来替换存放文件，编译固件的时候会自动按你设置路径的文件自动覆盖到固件原有的文件，这样就达到了固件编译好就是你设置好的文件了，不需要重复设置。<br>
+- files文件夹，是用来存放你编译好固件然后安装好固件后设置好的文件，固件的文件在什么位置(路径),你就按什么路径来存放在files文件夹里面，编译固件的时候会自动覆盖到固件原有的文件，这样就达到了固件编译好就是你设置好的文件了，不需要重复设置。<br>
 ----
 #
 - ### 5、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，就比如K2P闪存是16M的，但是固件体积最大只能15.2MB大小，超过就不行了
