--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,6 +1,6 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 - # 1、
-- 点击查看[Lede_source](https://github.com/coolsnowwolf/lede)出处，Luci版本=18.06、内核版本=5.4和5.10
+- [点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)，Luci版本=18.06、内核版本=5.4和5.10
 - [Lienol_source](https://github.com/Lienol/openwrt/tree/19.07)，Luci版本=17.01、内核版本=4.14
 - [Mortal_source](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)，Luci版本=21.02、内核版本=5.4
 - [Tianling_source](https://github.com/immortalwrt/immortalwrt/tree/openwrt-18.06)，Luci版本=18.06、内核版本=4.19和4.14
