--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -10,6 +10,8 @@
 
 - [点击查看<openwrt_amlogic>出处](https://github.com/coolsnowwolf/lede)，N1和晶晨系列CPU盒子专用（Luci版本=18.06、内核版本=5.4和5.10）
 
+- [常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)，各源码已加入里面的常用插件了
+
 - 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 ----
 - # 2、<br>
