--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,16 +1,16 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
 - # 1、
-- [点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)，Luci版本=18.06、内核版本=5.4和5.10
+- 《[点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)》，Luci版本=18.06、内核版本=5.4和5.10
 
-- [点击查看<Lienol_source>出处](https://github.com/Lienol/openwrt/tree/19.07)，Luci版本=17.01、内核版本=4.14
+- 《[点击查看<Lienol_source>出处](https://github.com/Lienol/openwrt/tree/19.07)》，Luci版本=17.01、内核版本=4.14
 
-- [点击查看<Mortal_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)，Luci版本=21.02、内核版本=5.4
+- 《[点击查看<Mortal_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》，Luci版本=21.02、内核版本=5.4
 
-- [点击查看<Tianling_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-18.06)，Luci版本=18.06、内核版本=4.19和4.14
+- 《[点击查看<Tianling_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-18.06)》，Luci版本=18.06、内核版本=4.19和4.14
 
-- [点击查看<openwrt_amlogic>出处](https://github.com/coolsnowwolf/lede)，N1和晶晨系列CPU盒子专用（Luci版本=18.06、内核版本=5.4和5.10）
+- 《[点击查看<openwrt_amlogic>出处](https://github.com/coolsnowwolf/lede)》，N1和晶晨系列CPU盒子专用（Luci版本=18.06、内核版本=5.4和5.10）
 
-- [常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)，各源码已加入里面的常用插件了
+- 《[常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)》，各源码已加入里面的常用插件了
 
 - 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 ----
