--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,4 +1,4 @@
-# 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，谢谢！
+# 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，每个脚本作者的想法不一样，制作出来的脚本就有分别，谢谢！
 - # 1、
 - 《[点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)》，Luci版本=18.06、内核版本=5.4和5.10
 
