--- a/名称.md
+++ b/名称.md
@@ -147,6 +147,7 @@
 ###### [luci-app-udp2raw  ](#/README.md) &emsp;&emsp; # udp2raw-tunnel管理界面-隧道服务器管理
 ###### [luci-app-uhttpd  ](#/README.md) &emsp;&emsp; # uHTTPd Web服务器
 ###### [luci-app-unblockmusic  ](#/README.md) &emsp;&emsp; #解锁网易云灰色歌曲
+###### [luci-app-unblockneteasemusic  ](#/README.md) &emsp;&emsp; #新版本解除网易云音乐播放限制
 ###### [luci-app-unbound  ](#/README.md) &emsp;&emsp; # Unbound DNS解析器
 ###### [luci-app-upnp  ](#/README.md) &emsp;&emsp; # 通用即插即用UPnP（端口自动转发）
 ###### [luci-app-usb-printer  ](#/README.md) &emsp;&emsp; # USB 打印服务器
