--- a/名称.md
+++ b/名称.md
@@ -1,6 +1,6 @@
 # 插件中英文名称对照表
 
-###### [luci-app-clash  ](#/README.md) &emsp;&emsp; # clash科学上网
+###### [luci-app-clash  ](#/README.md) &emsp;&emsp; # clash科学上网（基本上没用的了，已经给luci-app-openclash代替）
 ###### [luci-app-accesscontrol   ](#/README.md) &emsp;&emsp; # 访问时间控制
 ###### [luci-app-adblock  ](#/README.md) &emsp;&emsp; # ADB 广告过滤
 ###### [luci-app-adblock-plus  ](#/README.md) &emsp;&emsp; # Adblock Plus+ 拦截广告
