--- a/名称.md
+++ b/名称.md
@@ -187,6 +187,8 @@ luci-app-dockerman 和 luci-app-docker 只能二选一
 想要编译luci-app-dockerman或者luci-app-docker
 
 首先要在Global build settings ---> Enable IPv6 support in packages (NEW)（选上）
+
+选择dockerman或docker建议选上luci-app-diskman方便挂盘所用 
 ```
 
 &emsp;luci-app-oled  为1306 0.91 oled专用，如果oled不显示，[请看这里](https://github.com/NateLol/luci-app-oled/issues/10)
