--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -1,29 +1,9 @@
 # 编译时候删除不需要的文件（减负固件包）
 
--  编译时候删除不要的固件，不过要在主文件build-openwrt.yml里面手动增加的 
-```
-
-    - name: 整理固件文件夹
-      id: organizer
-      run: |
-        if [ "${Modelfile}" == "openwrt_amlogic" ]; then
-          source "${PATH1}/common.sh" && Diy_amlogic
-        fi
-        cd openwrt
-        cp -Rf bin/targets/*/* "${Home}"/upgrade
-        cd bin && mkdir config
-        cp -Rf targets/*/*/config.buildinfo "${Home}"/bin/config/config.txt
-        cd targets/*/*
-        find -name "*.buildinfo*" | xargs -i rm -rf {}
-        find -name "*sha256sums*" | xargs -i rm -rf {}
-        find -name "*.manifest*" | xargs -i rm -rf {}
-        find -name "*rootfs*" | xargs -i rm -rf {}
-        rm -rf packages
-        rename -v "s/^openwrt/${{ env.date1 }}-${{ env.CODE }}/" *
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "BOT=TRUE" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
-```     
+```   
 ---  
- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shangu.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shangu1.png" />
 ---
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shangu2.png" />
+---
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shangu3.png" />
