--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -10,7 +10,7 @@
 
 - 《[点击查看<openwrt_amlogic>出处](https://github.com/coolsnowwolf/lede)》，N1和晶晨系列CPU盒子专用（Luci版本=18.06、内核版本=5.4和5.10）
 
-- 《[常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)》，各源码已加入里面的常用插件了
+- 《[常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)》，各固件源码已加入里面的常用插件源码了，大大的方便大家使用
 
 - 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 ----
@@ -27,7 +27,7 @@
 - diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按源码路径替换所有的源码文件，我在所有机型里面放了banner文件，你们可以看看我放banner文件的路径和源码本来的路径相对比一下应该就能了解怎么替换文件了。<br>比如[Lede源码的banner文件路径是package/basefiles/files/etc/banner](https://github.com/coolsnowwolf/lede/blob/master/package/base-files/files/etc/banner)，替换他的文件就放在diy/package/base-files/files/etc/banner位置<br>
 
 ----
-- pacthes补丁文件夹，修改源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，但是源码格局改变或者就会不好用了，编译的时候到了【加载源,patch补丁和自定义设置】就会错误 《[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)》 <br>
+- pacthes补丁文件夹，修改固件源码，然后提取修改差异部分来达到修改源码文件的需求，源码天天更新，如果整个文件替换的话，有更新你也不知道，在不改变源码格局，就是没多行或者少行的情况下，这样打补丁是很不错的，如果源码文件有大改动导致【加载源,补丁和自定义设置】步骤运行错误，那您就需要再对这个文件进行一次补丁提取就可以了。 《[提取补丁教程](https://github.com/danshui-git/shuoming/blob/master/buding.md)》 <br>
 
     Lienol跟lede、Mortal有些文件做出来的补丁不通用的，所以你们要做补丁的时候一定要根据各个作者源码文件来制作
 ----
