--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,8 +1,8 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，每个脚本作者的想法不一样，制作出来的脚本就有分别，谢谢！
 - # 1、
-- 《[点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)》，Luci版本=18.06、内核版本=5.4和5.10
+- 《[点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)》，Luci版本=18.06、内核版本=5.10和5.15
 
-- 《[点击查看<Lienol_source>出处](https://github.com/Lienol/openwrt/tree/19.07)》，Luci版本=17.01、内核版本=4.14
+- 《[点击查看<Lienol_source>出处](https://github.com/Lienol/openwrt/tree/main)》，Luci版本=master、内核版本=5.10
 
 - 《[点击查看<Mortal_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》，Luci版本=21.02、内核版本=5.4
 
