--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -18,26 +18,16 @@ sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
 ```
-如果你的机子支持自动更新的话，可以在 build/对应源码文件夹/settings.ini 里面
-比如 build/Lede_source/settings.ini 把 REGULAR_UPDATE="false" 改成 REGULAR_UPDATE="true"
-
-luci-app-autoupdate    定时更新插件
-luci-app-ttyd        openwrt内置SSH命令窗
+编译固件时候需要加入的插件
+luci-app-autoupdate    定时更新插件（必定需要）
+luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 ```
 ---
 - ### 使用命令更新固件脚本:
 ```
-首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用putty按需输入下方指令:
+首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用SSH工具、putty工具连接openwrt按需输入下方指令:
 
-检查更新(保留配置): bash /bin/AutoUpdate.sh
-
-检查更新(不保留配置): bash /bin/AutoUpdate.sh -n
-
-更换其他作者固件(不保留配置): bash /bin/AutoUpdate.sh -g
-
-测试模式,观看运行步骤(不安装固件): bash /bin/AutoUpdate.sh -t
-
-查看详细信息和命令使用方法：bash /bin/AutoUpdate.sh -h
+openwrt
 ```
 
 - ### Openwrt后台的定时更新设置:
