--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -26,8 +26,9 @@ luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 - ### 使用命令更新固件脚本:
 ```
 首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用SSH工具、putty工具连接openwrt按需输入下方指令:
+命令更新的话，可以选择不保留配置升级固件
 
-openwrt
+在线升级固件命令：openwrt
 ```
 
 - ### Openwrt后台的定时更新设置:
