--- a/名称.md
+++ b/名称.md
@@ -3,11 +3,11 @@
 ###### [luci-app-clash  ](#/README.md) &emsp;&emsp; # clash科学上网（基本上没用的了，已经给luci-app-openclash代替）
 ###### [luci-app-accesscontrol   ](#/README.md) &emsp;&emsp; # 访问时间控制
 ###### [luci-app-adblock  ](#/README.md) &emsp;&emsp; # ADB 广告过滤
-###### [luci-app-adblock-plus  ](#/README.md) &emsp;&emsp; # Adblock Plus+ 拦截广告
 ###### [luci-app-adbyby-plus   ](#/README.md) &emsp;&emsp; # 广告屏蔽大师Plus +
 ###### [luci-app-adguardhome  ](#/README.md) &emsp;&emsp; # adguardhome广告过滤
 ###### [luci-app-advanced  ](#/README.md) &emsp;&emsp; # 高级设置（内置[luci-app-fileassistant](#/README.md)文件助手）
 ###### [luci-app-advanced-reboot  ](#/README.md) &emsp;&emsp; # 高级重启
+###### [luci-app-aliyundrive-webdav  ](#/README.md) &emsp;&emsp; # 阿里云盘
 ###### [luci-app-ahcp  ](#/README.md) &emsp;&emsp; # 支持 AHCPd
 ###### [luci-app-airplay2  ](#/README.md) &emsp;&emsp; # Apple AirPlay2 无损音频接收服务器
 ###### [luci-app-aliddns  ](#/README.md) &emsp;&emsp; # 阿里 DDNS
@@ -79,7 +79,6 @@
 ###### [luci-app-mwan3helper  ](#/README.md) &emsp;&emsp; # MWAN3分流助手
 ###### [luci-app-n2n_v2  ](#/README.md) &emsp;&emsp; # N2N内网穿透 N2N v2 VPN服务
 ###### [luci-app-netdata  ](#/README.md) &emsp;&emsp; # 实时监控中文版
-###### [luci-app-netkeeper-interception  ](#/README.md) &emsp;&emsp; # 闪讯拦截,闪讯拨号
 ###### [luci-app-nfs  ](#/README.md) &emsp;&emsp; # NFS网络共享
 ###### [luci-app-nft-qos  ](#/README.md) &emsp;&emsp; # QOS流量控制 Nftables版
 ###### [luci-app-nlbwmon  ](#/README.md) &emsp;&emsp; # 网络带宽监视器
@@ -127,6 +126,7 @@
 ###### [luci-app-socat   ](#/README.md) &emsp;&emsp; # 多功能的网络工具
 ###### [luci-app-softethervpn  ](#/README.md) &emsp;&emsp; # SoftEther VPN服务器  NAT穿透
 ###### [luci-app-splash  ](#/README.md) &emsp;&emsp; # Client-Splash是无线MESH网络的一个热点认证系统
+###### [luci-app-store  ](#/README.md) &emsp;&emsp; # 在线商店
 ###### [luci-app-sqm  ](#/README.md) &emsp;&emsp; # 流量智能队列管理（QOS）
 ###### [luci-app-squid  ](#/README.md) &emsp;&emsp; # Squid代理服务器
 ###### [luci-app-ssr-plus  ](#/README.md) &emsp;&emsp; #SSR Plus+ 科学上网
@@ -163,7 +163,7 @@
 ###### [luci-app-webadmin  ](#/README.md) &emsp;&emsp; # Web管理页面设置
 ###### [luci-app-wifischedule  ](#/README.md) &emsp;&emsp; # WiFi 计划
 ###### [luci-app-wireguard  ](#/README.md) &emsp;&emsp; # VPN服务器 WireGuard状态
-###### [luci-app-wol  ](#/README.md) &emsp;&emsp; # WOL网络唤醒
+###### [wifidog-wiwiz  ](#/README.md) &emsp;&emsp; # 拼拼WiFi(luci-app-eqos必选，然后在Network ---> Captive Portals ---> wifidog-wiwiz 勾选上)
 ###### [luci-app-wolplus  ](#/README.md) &emsp;&emsp; # 新版网络唤醒，替换luci-app-wol
 ###### [luci-app-wrtbwmon  ](#/README.md) &emsp;&emsp; # 实时流量监测
 ###### [luci-app-xlnetacc  ](#/README.md) &emsp;&emsp; # 迅雷快鸟
@@ -176,7 +176,7 @@
 ###### [luci-theme-infinityfreedom  ](#/README.md) &emsp;&emsp; # 透明效果 主题
 ###### [luci-theme-material  ](#/README.md) &emsp;&emsp; # material 主题
 ###### [luci-theme-netgear  ](#/README.md) &emsp;&emsp; # 网件 主题
-###### [luci-theme-opentomato  ](#/README.md) &emsp;&emsp; # opentomato 主题
+###### [luci-theme-neobird  ](#/README.md) &emsp;&emsp; # neobird 主题
 ###### [luci-theme-opentomcat  ](#/README.md) &emsp;&emsp; # opentomcat 主题
 ###### [luci-theme-rosy  ](#/README.md) &emsp;&emsp; # rosy 主题
 
@@ -192,3 +192,5 @@ luci-app-dockerman 和 luci-app-docker 只能二选一
 ```
 
 &emsp;luci-app-oled  为1306 0.91 oled专用，如果oled不显示，[请看这里](https://github.com/NateLol/luci-app-oled/issues/10)
+
+- 插件会根据情况而变动的，以后此列表就不更新了，以当时编译时候为准，如果您有什么插件想增加，而那个插件又确实可以在源码内使用的，可以告诉我，我增加上
