--- a/名称.md
+++ b/名称.md
@@ -191,6 +191,6 @@ luci-app-dockerman 和 luci-app-docker 只能二选一
 选择dockerman或docker建议选上luci-app-diskman方便挂盘所用 
 ```
 
-&emsp;luci-app-oled  为1306 0.91 oled专用，如果oled不显示，[请看这里](https://github.com/NateLol/luci-app-oled/issues/10)
+- luci-app-oled  为1306 0.91 oled专用，如果oled不显示，[请看这里](https://github.com/NateLol/luci-app-oled/issues/10)
 
 - 插件会根据情况而变动的，以后此列表就不更新了，以当时编译时候为准，如果您有什么插件想增加，而那个插件又确实可以在源码内使用的，可以告诉我，我增加上
