--- a/名称.md
+++ b/名称.md
@@ -134,7 +134,7 @@
 ###### [luci-app-ssrserver-python  ](#/README.md) &emsp;&emsp; #ShadowsocksR Python服务器
 ###### [luci-app-statistics  ](#/README.md) &emsp;&emsp; # 流量监控工具
 ###### [luci-app-switch-lan-play  ](#/README.md) &emsp;&emsp; # 虚拟局域网联机工具
-###### [luci-app-syncdial  ](#/README.md) &emsp;&emsp; # 多拨虚拟网卡（原macvlan
+###### [luci-app-syncdial  ](#/README.md) &emsp;&emsp; # 多拨虚拟网卡（原macvlan）
 ###### [luci-app-syncthing  ](#/README.md) &emsp;&emsp; # syncthing同步工具
 ###### [luci-app-tencentddns  ](#/README.md) &emsp;&emsp; # 腾讯DDNS
 ###### [luci-app-timecontrol  ](#/README.md) &emsp;&emsp; # 时间控制跟（luci-app-accesscontrol）差不多，不同的是这个可以配合高级设置一起使用
