--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -1,17 +1,13 @@
-- 如果要把定时更新插件编译进固件，就一定要先设置好发布密匙，因为编译完成会把固件发布到ginthub到时候检测更新就是检测github的发布地址《[密匙设置教程](https://github.com/danshui-git/shuoming/blob/master/ms.md)》
 
-- 定时升级固件功能能支持什么机型我也不了解，已测试机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3、小米的几个机型），现有机型都自动适配了固件，其他的都适配成‘sysupgrade.bin’这样格式的固件。
+- 定时升级固件功能能支持什么机型我也不了解，已测试机型有（newifi_d2、x86-64、phicomm_k2p、phicomm_k3、r2s和小米的好几个机型）
 
-- 你也可以自己测试一下你机子能不能搞定时升级固件功能，测试方法也很简单，用[WinSCP](https://winscp.net/eng/download.php)工具连接你的路由器，然后把固件拖进路由器的tmp文件夹里面，然后用固件后台自带的‘TTYD 终端’或者叫‘命令窗’，或者SSH工具都可以，用工具得要先连接你的路由器，然后在命令窗输入 cd /tmp 进入文件夹后就用升级命令更新固件，如果能顺利安装固件的话，就表示你的路由器可以用定时更新插件了，命令是：sysupgrade -F -n 固件完整名字+后缀
-- 如果你的机子可以用定时更新，而你机子编译出来的固件又不能提取发布到Releases上，可以联系我，我帮你适配
+- 你也可以自己测试一下你机子能不能搞定时升级固件功能，测试方法也很简单，用[WinSCP](https://winscp.net/eng/download.php)工具连接你的路由器，然后把固件拖进路由器的根目录的tmp文件夹里面
+
+- 复制您拖到tmp文件夹的固件完整名字+后缀，然后用固件openwrt自带的‘TTYD 终端’或者叫‘命令窗’，或者SSH工具连接你的路由器，然后在命令窗输入命令：cd /tmp && sysupgrade -F -n 固件完整名字+后缀
 ```
-回顾上面测试步骤，把固件拖入固件的tmp文件夹中，然后用命令进入文件夹
+回顾上面测试步骤，把固件用WinSCP拖入固件的根目录的 tmp 文件夹中，然后使用命令
 
-cd /tmp
-
-进入文件夹后使用升级命令
-
-sysupgrade -F -n 固件完整名字+后缀
+cd /tmp && sysupgrade -F -n 固件完整名字+后缀
 
 比如：
 sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
@@ -23,10 +19,9 @@ luci-app-autoupdate    定时更新插件（必定需要）
 luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 ```
 ---
-- ### 使用命令更新固件脚本:
+- ### 如若您想使用命令更新固件的话:
 ```
 首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用SSH工具、putty工具连接openwrt按需输入下方指令:
-命令更新的话，可以选择不保留配置升级固件
 
 在线升级固件命令：openwrt
 ```
