--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -10,7 +10,7 @@
 cd /tmp && sysupgrade -F -n 固件完整名字+后缀
 
 比如：
-sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
+cd /tmp && sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
 ```
