--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -3,7 +3,7 @@
 
 - 你也可以自己测试一下你机子能不能搞定时升级固件功能，测试方法也很简单，用[WinSCP](https://winscp.net/eng/download.php)工具连接你的路由器，然后把固件拖进路由器的根目录的tmp文件夹里面
 
-- 复制您拖到tmp文件夹的固件完整名字+后缀，然后用固件openwrt自带的‘TTYD 终端’或者叫‘命令窗’，或者SSH工具连接你的路由器，然后在命令窗输入命令：cd /tmp && sysupgrade -F -n 固件完整名字+后缀
+- 复制您拖到tmp文件夹的固件完整名字+后缀，然后用openwrt自带的‘TTYD 终端’或者叫‘命令窗’，或者SSH工具连接你的路由器，然后在命令窗输入命令：cd /tmp && sysupgrade -F -n 固件完整名字+后缀
 ```
 回顾上面测试步骤，把固件用WinSCP拖入固件的根目录的 tmp 文件夹中，然后使用命令
 
