--- a/名称.md
+++ b/名称.md
@@ -128,6 +128,7 @@
 ###### [luci-app-softethervpn  ](#/README.md) &emsp;&emsp; # SoftEther VPN服务器  NAT穿透
 ###### [luci-app-splash  ](#/README.md) &emsp;&emsp; # Client-Splash是无线MESH网络的一个热点认证系统
 ###### [luci-app-store  ](#/README.md) &emsp;&emsp; # 在线商店
+###### [luci-app-supervisord  ](#/README.md) &emsp;&emsp; # 一款golang开发的进程管理
 ###### [luci-app-sqm  ](#/README.md) &emsp;&emsp; # 流量智能队列管理（QOS）
 ###### [luci-app-squid  ](#/README.md) &emsp;&emsp; # Squid代理服务器
 ###### [luci-app-ssr-plus  ](#/README.md) &emsp;&emsp; #SSR Plus+ 科学上网
