--- a/名称.md
+++ b/名称.md
@@ -168,6 +168,7 @@
 ###### [wifidog-wiwiz  ](#/README.md) &emsp;&emsp; # 拼拼WiFi(luci-app-eqos必选，然后在Network ---> Captive Portals ---> wifidog-wiwiz 勾选上)
 ###### [luci-app-wolplus  ](#/README.md) &emsp;&emsp; # 新版网络唤醒，替换luci-app-wol
 ###### [luci-app-wrtbwmon  ](#/README.md) &emsp;&emsp; # 实时流量监测
+###### [luci-app-webd  ](#/README.md) &emsp;&emsp; # Webd 是一款轻量级的 (self-hosted) 自建网盘
 ###### [luci-app-xlnetacc  ](#/README.md) &emsp;&emsp; # 迅雷快鸟
 ###### [luci-app-zerotier  ](#/README.md) &emsp;&emsp; # ZeroTier内网穿透
 ###### [luci-theme-Light  ](#/README.md) &emsp;&emsp; # Light 主题
