--- a/修改内核版本.md
+++ b/修改内核版本.md
@@ -1,1 +1,7 @@
 # 修改源码内核版本说明
+
+---
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/nh1.png" />
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/nh2.png" />
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/nh3.png" />
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/nh4.png" />
