--- a/修改内核版本.md
+++ b/修改内核版本.md
@@ -1,4 +1,6 @@
 # 修改源码内核版本说明
+#
+## 您编译什么源码就到对应源码，对应分支里面查看源码的文件，别你编译LEDE的就跑去Lienol源码那里看，还有就算你编译Lienol的，也要注意你编译的分支，分支对才能看到真正的当前版本，还有源码内有没有附带其他版本的可供选择
 
 ---
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/nh1.png" />
