--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -13,6 +13,8 @@ cd /tmp && sysupgrade -F -n 固件完整名字+后缀
 cd /tmp && sysupgrade -F -n openwrt-x86-64-generic-squashfs-combined.img.gz
 ```
 
+- 如果您的机子可以在线更新，脚本又没适配到的话，可以联系我，我给适配好，或者不同源码之间，编译出来的在线更新固件机型名称不一样的（比如phicomm_k3和phicomm-k3），也可以联系我，做成统一的
+
 ```
 编译固件时候需要加入的插件
 luci-app-autoupdate    定时更新插件（必定需要）
