--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,14 +1,14 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，每个脚本作者的想法不一样，制作出来的脚本就有分别，谢谢！
 - # 1、
-- 《[点击查看<Lede_source>出处](https://github.com/coolsnowwolf/lede)》，Luci版本=18.06、内核版本=5.10和5.15
+- 《[点击查看<Lede>出处](https://github.com/coolsnowwolf/lede)》
 
-- 《[点击查看<Lienol_source>出处](https://github.com/Lienol/openwrt/tree/main)》，Luci版本=master、内核版本=5.10
+- 《[点击查看<Lienol>出处](https://github.com/Lienol/openwrt)》
 
-- 《[点击查看<Mortal_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-21.02)》，Luci版本=21.02、内核版本=5.4
+- 《[点击查看<Immortalwrt>出处](https://github.com/immortalwrt/immortalwrt)》
 
-- 《[点击查看<Tianling_source>出处](https://github.com/immortalwrt/immortalwrt/tree/openwrt-18.06)》，Luci版本=18.06、内核版本=4.19和4.14
+- 《[点击查看<Official>出处](https://github.com/openwrt/openwrt)》
 
-- 《[点击查看<openwrt_amlogic>出处](https://github.com/coolsnowwolf/lede)》，N1和晶晨系列CPU盒子专用（Luci版本=18.06、内核版本=5.4和5.10）
+- 《[点击查看<Xwrt>出处](https://github.com/x-wrt/x-wrt))》
 
 - 《[常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)》，各固件源码已加入里面的常用插件源码了，大大的方便大家使用
 
