--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -1,6 +1,6 @@
 # 脚本简单介绍，不管新手还是老司机，请认真的看一遍我写的说明，每个脚本作者的想法不一样，制作出来的脚本就有分别，谢谢！
 - # 1、
-《[点击查看<Lede>出处](https://github.com/coolsnowwolf/lede)》
+《[点击查看<Lede_>出处](https://github.com/coolsnowwolf/lede)》
 - [点击查看<Lede>出处](https://github.com/coolsnowwolf/lede)
 
 - 《[点击查看<Lienol>出处](https://github.com/Lienol/openwrt)》
