--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -26,6 +26,8 @@ luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用SSH工具、putty工具连接openwrt按需输入下方指令:
 
 在线升级固件命令：openwrt
+
+命令在线更新可以更新不同源码作者的固件,比如你是X86的，你编译了Lede的，也编译了Lienol的,同时编译的时候也编译有在线更新功能的话，用命令就可以直接在线更换他们之间的固件
 ```
 
 - ### Openwrt后台的定时更新设置:
