--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -13,6 +13,8 @@
 - 《[常用插件列表](https://github.com/danshui-git/shuoming/blob/master/%E5%90%8D%E7%A7%B0.md)》，各固件源码已加入里面的常用插件源码了，大大的方便大家使用
 
 - 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
+
+- LEDE源码其实就一个master分支的，在我仓库还有一个gl-ax1800分支可以选择，是他另外一个仓库的源码，此源码是4.14内核的，《[点击查看源码]([https://github.com/x-wrt/x-wrt](https://github.com/coolsnowwolf/openwrt-gl-ax1800)))》
 ----
 - # 2、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22211.png" />
