--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -14,8 +14,10 @@
 
 - 《[增加编译机型方法](https://github.com/danshui-git/shuoming/blob/master/jlck.md)》
 
-- LEDE源码其实就一个master分支的，在我仓库还有一个gl-ax1800分支可以选择，是他另外一个仓库的源码，此源码是4.14内核的，《[点击查看源码](https://github.com/coolsnowwolf/openwrt-gl-ax1800)》
+- 特别说明：LEDE源码其实就一个master分支的，在我仓库还有一个gl-ax1800分支可以选择，是他另外一个仓库的源码，此源码是4.14内核的，《[点击查看源码](https://github.com/coolsnowwolf/openwrt-gl-ax1800)》
+
 ----
+
 - # 2、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22211.png" />
 - # 3、<br>
