--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -22,7 +22,7 @@
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22211.png" />
 - # 3、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22213.png" />
-- # 4、在对应的.yml文件里面增加对应的机型选择<br>
+- # 4、在对应的.yml文件里面增加seed文件夹内的对应文件机型选择<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22212.png" />
 #
 - # 5、build-对应机型的 diy、pacthes、files 文件夹说明，善用这3个文件夹会给你编译带来很多方便
