--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -24,8 +24,12 @@
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22213.png" />
 - # 4、在对应的.yml文件里面增加seed文件夹内的对应文件机型选择<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22212.png" />
+- # 5、<br>
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22214.png" />
+- # 6、<br>
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22215.png" />
 #
-- # 5、build-对应机型的 diy、pacthes、files 文件夹说明，善用这3个文件夹会给你编译带来很多方便
+- # 7、build-对应机型的 diy、pacthes、files 文件夹说明，善用这3个文件夹会给你编译带来很多方便
 ----
 - diy文件夹里面可以按源码对应路径放入文件替换源码文件，说白了diy文件夹里面就是源码的根目录，你可以按源码路径替换所有的源码文件，我在所有机型里面放了banner文件，你们可以看看我放banner文件的路径和源码本来的路径相对比一下应该就能了解怎么替换文件了。<br>比如[Lede源码的banner文件路径是package/basefiles/files/etc/banner](https://github.com/coolsnowwolf/lede/blob/master/package/base-files/files/etc/banner)，替换他的文件就放在diy/package/base-files/files/etc/banner位置<br>
 
@@ -37,5 +41,5 @@
 - files文件夹，是用来存放你编译好固件然后安装好固件后设置好的文件，固件的文件在什么位置(路径),你就按什么路径来存放在files文件夹里面，编译固件的时候会自动覆盖到固件原有的文件，这样就达到了固件编译好就是你设置好的文件了，不需要重复设置。<br>
 ----
 #
-- 6、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，就比如K2P闪存是16M的，但是固件体积最大只能15.2MB大小，超过就不行了
+- 8、有好多机子的固件默认是不能超过15MB的，如果你们的机子是需要【sysupgrade.bin】格式固件的，编译成功又没看到这个格式固件就是你选择插件太多，超过了源码规定的固件体积了，如果是这样情况就要了解你固件最大是多大的，注意插件的选择，就比如K2P闪存是16M的，但是固件体积最大只能15.2MB大小，超过就不行了
 #
