--- a/简单介绍新脚本.md
+++ b/简单介绍新脚本.md
@@ -22,6 +22,8 @@
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22211.png" />
 - # 3、<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22213.png" />
+- # 3、<br>
+# <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x2221111.png" />
 - # 4、在对应的.yml文件里面增加seed文件夹内的对应文件机型选择<br>
 # <img src="https://github.com/danshui-git/shuoming/blob/master/doc/x22212.png" />
 - # 5、<br>
