--- a/4固件下载.md
+++ b/4固件下载.md
@@ -1,15 +1,15 @@
 # 固件下载说明：
 #
 
-固件上传在 github Artifacts 的下载方式
+### 固件上传在 github Artifacts 的下载方式
 #
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia1.png" />
+-<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia1.png" />
 #
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia2.png" />
+-<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia2.png" />
 #
 
 ---
 
-固件发布在 Releases 的下载方式
+### 固件发布在 Releases 的下载方式
 #
-!<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia3.png" />
+-<img src="https://github.com/danshui-git/shuoming/blob/master/doc/xia3.png" />
