--- a/1拉取仓库.md
+++ b/1拉取仓库.md
@@ -5,9 +5,8 @@
 - 比如你仓库原本就有一个 build-openwrt 名字的仓库，拉取我仓库后，拉到我的仓库名字就是  build-openwrt-1
 - 如果出现这个情况，请在仓库的Settings那里修改一下仓库名称，带-1的情况有可能会发生一些奇奇怪怪的问题的
 #
-- 1、
-! <img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/la3.png" />
 #
 ---
 - # 如果出现带个-1的情况，改名字方法
-! <img src="https://github.com/danshui-git/shuoming/blob/master/doc/la15.png" />
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/la15.png" />
