--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -21,20 +21,18 @@ luci-app-autoupdate    定时更新插件（必定需要）
 luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 ```
 ---
-- ### 如若您想使用命令更新固件的话:
-```
-首先需要打开 Openwrt 主页,点击系统-TTYD 终端或命令窗,或者使用SSH工具、putty工具连接openwrt按需输入下方指令:
 
-在线升级固件命令：openwrt
-
-命令在线更新可以更新不同源码作者的固件,比如你是X86的，你编译了Lede的，也编译了Lienol的,
-同时编译的时候也编译有在线更新功能的话，用命令就可以直接在线更换他们之间的固件
-```
-
-- ### Openwrt后台的定时更新设置:
+- ### LUCI在线更新方式
 - 首先需要打开 Openwrt 主页,点击系统-定时更新 ，定时更新勾选上，设置好时间，保存设置就可以了（定时自动更新是保留配置更新的）
 - 
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx.png" />
+
+---
+
+- ### 在线升级固件命令：openwrt
+- 首先需要打开 Openwrt 主页,点击系统-TTYD，或SSH工具连接固件后台，然后输入命令：openwrt
+- 
+- <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx2.png" />
 
 ---
 ## 鸣谢
