--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -22,16 +22,16 @@ luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 ```
 ---
 
-- ### LUCI在线更新方式
+## LUCI在线更新方式
 - 首先需要打开 Openwrt 主页,点击系统-定时更新 ，定时更新勾选上，设置好时间，保存设置就可以了（定时自动更新是保留配置更新的）
-- 
+
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx.png" />
 
 ---
 
-- ### 在线升级固件命令：openwrt
+## 在线升级固件命令：openwrt
 - 首先需要打开 Openwrt 主页,点击系统-TTYD，或SSH工具连接固件后台，然后输入命令：openwrt
-- 
+
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx2.png" />
 
 ---
