--- a/定时更新插件.md
+++ b/定时更新插件.md
@@ -28,8 +28,9 @@ luci-app-ttyd        openwrt内置SSH命令窗（可以不编译）
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx.png" />
 
 ---
+---
 
-## 在线升级固件命令：openwrt
+## 后台在线升级固件命令：openwrt
 - 首先需要打开 Openwrt 主页,点击系统-TTYD，或SSH工具连接固件后台，然后输入命令：openwrt
 
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/zxgx2.png" />
