--- a/其他说明.md
+++ b/其他说明.md
@@ -11,6 +11,11 @@
 
 以上的选项各源码可能个别默认勾选了，没的就选上，选了的就不用管，我说的这些按顺序去查看，没选的就选上就可以了
 
+---
+
+在最新版的编译脚本的自定义设置文件（diy-part.sh）里面，可以直接编译了，不需要以上步骤那么麻烦了
+export Enable_IPV6_function="1"
+
 ````
 #
 ````
