--- a/其他说明.md
+++ b/其他说明.md
@@ -14,7 +14,8 @@
 ---
 
 在最新版的编译脚本的自定义设置文件（diy-part.sh）里面，可以直接编译了，不需要以上步骤那么麻烦了
-export Enable_IPV6_function="1"
+
+export Enable_IPV6_function="1"   # export Enable_IPV6_function="0" ，改成 export Enable_IPV6_function="1" 就搞定
 
 ````
 #
