--- a/其他说明.md
+++ b/其他说明.md
@@ -3,7 +3,8 @@
 ````
 - 支持ipv6：
 
-在最新版的编译脚本的自定义设置文件（diy-part.sh）里面，把 export Enable_IPV6_function="0" 改成 export Enable_IPV6_function="1" 搞定
+在最新版的编译脚本的自定义设置文件（diy-part.sh）里面，
+把 export Enable_IPV6_function="0" 改成 export Enable_IPV6_function="1" 搞定
 
 export Enable_IPV6_function="1"
 
@@ -12,7 +13,8 @@ export Enable_IPV6_function="1"
 ````
 - 编译 IPV4 固件：
 
-在最新版的编译脚本的自定义设置文件（diy-part.sh）里面，把 export Enable_IPV4_function="0" 改成 export Enable_IPV4_function="1" 搞定
+在最新版的编译脚本的自定义设置文件（diy-part.sh）里面，
+把 export Enable_IPV4_function="0" 改成 export Enable_IPV4_function="1" 搞定
 
 export Enable_IPV4_function="1"
 
