--- a/固件文件夹整理.md
+++ b/固件文件夹整理.md
@@ -1,5 +1,5 @@
 # 编译时候删除不需要的文件（减负固件包）
-## 把整理前的全部文件，里面你不想要的文件或者固件，把名称写到 cat >"$CLEAR_PATH" <<-EOF  和 EOF 中间，一行写一条就可以了
+## 把整理前的全部文件，里面你不想要的文件或者固件，把名称写到diy-part.sh文件的 cat >"$CLEAR_PATH" <<-EOF  和 EOF 中间，一行写一条就可以了
  
 ---  
 - <img src="https://github.com/danshui-git/shuoming/blob/master/doc/shanchuwenjian.png" />
